# cesm2-bias-correction

./: .gitignore  README.md  atmos_hus.nc  atmos_ps.nc  atmos_ta.nc  atmos_tos.nc  atmos_tos_1.nc  atmos_ts.nc  atmos_ts_1.nc  atmos_zsfc.nc  hybrid2pressure.ipynb  hybrid2pressure.py  pyproject.toml
jupyter_notebooks/: hybrid2pressure.ipynb  sandbox.ipynb
output_data/: ncl_pslec.nc
scripts/: process_cesm.py
src/cesm_bias_correction/: hybrid2pressure.py
