[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ces_bias_correction"
version = "0.0.1"
authors = [
  { name="Kenton Wu", email="wukenton@gmail.com" },
  { name="Thomas Cram", email="tcram@ucar.edu" },
  { name="Riley Conroy", email="rpconroy@ucar.edu" },
]
description = "Python package to bias correct CESM2 model output for CMIP6, following the bias correction method of Bruyere et al. (2014)"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "xarray",
    "xesmf",
    "numba",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.urls]
"Homepage" = "https://github.com/NCAR/cesm-bias-correction"